Add implicit content to Knowledge